# connorcode

./: .gitignore  README.md  TODO.md  docker-compose.yml  package-lock.json  package.json  svelte.config.js
.github/workflows/: backend-deploy.yml  backend.yml  frontend-deploy.yml
backend/: .dockerignore  .gitignore  Cargo.toml  dockerfile
backend/.cargo/: config.toml
backend/src/: app.rs  config.rs  database.rs  main.rs  markdown.rs  mime.rs  writing.rs
backend/src/misc/: mime.rs  mod.rs  util.rs
backend/src/routes/: analytics.rs  downloads.rs  files.rs  ip.rs  mod.rs  redirect.rs
backend/src/routes/writing/: article.rs  articles.rs  assets.rs  mod.rs  rss.rs
backend/src/sql/: init_analytics.sql  init_legacy_views.sql  view_count.sql
backend/src/writing/: article.rs  mod.rs  project.rs
frontend/: .gitignore  dockerfile  package-lock.json  package.json  svelte.config.js
frontend/src/: hooks.server.ts
frontend/src/lib/: consts.ts  date.ts  types.ts  utils.ts
frontend/src/lib/components/: Admonition.svelte  BlurHashImage.svelte  Head.svelte  (+9 more)
frontend/src/routes/: +error.svelte  +layout.svelte  +page.server.ts  +page.svelte
frontend/src/styles/: main.scss  print.scss  typefaces.scss
frontend/static/: humans.txt  key.asc
scripts/migrations/: remove_analytics_slash.sql  transfer_legacy_views.jl  transfer_legacy_views.py
src/lib/: Admonition.svelte  Head.svelte  consts.ts
src/routes/: +error.svelte  +layout.svelte  +page.svelte
src/routes/about/: +page.svelte
src/routes/writing/: +page.svelte
src/styles/: main.scss
static/: humans.txt
(+22 files in other folders)
