[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
afire = { version = "3.0.0-alpha.3", features = [
    "extensions",
    "tracing",
], default-features = false }
anyhow = "1.0.79"
chrono = "0.4.38"
comrak = { version = "0.22.0", features = ["emojis", "syntect"] }
ctrlc = "3.4.2"
dotenvy = "0.15.7"
indoc = "2.0.5"
latex2mathml = "0.2.3"
once_cell = "1.19.0"
parking_lot = "0.12.1"
regex = "1.10.4"
rusqlite = { version = "0.30.0", features = ["bundled"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
serde_yaml = "0.9.34"
syntect = "5.0.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
ureq = { version = "2.9.7", features = ["json"] }
